syntax = "proto3";

package com.auth.v1;

import "google/protobuf/timestamp.proto";
option go_package = "goxenith/proto/auth/v1;v1";


enum Gender {
  MALE = 0;
  FEMALE = 1;
}

message UserInfo {
  // @inject_tag: json:"id"
  uint64 id = 1;
  // @inject_tag: json:"userName"
  string user_name = 2;
  // @inject_tag: json:"realName"
  string real_name = 3;
  // @inject_tag: json:"phone"
  string phone = 4;
  // @inject_tag: json:"city"
  string city = 5;
  // @inject_tag: json:"age"
  int32 age = 6;
  // @inject_tag: json:"birthday"
  google.protobuf.Timestamp birthday = 7;
  // @inject_tag: json:"personalProfile"
  string personal_profile = 8;
  // @inject_tag: json:"email"
  string email = 9;
  // @inject_tag: json:"avatar"
  string avatar = 10;
  // @inject_tag: json:"gender"
  Gender gender = 11;
  // 注册时间
 // @inject_tag: json:"createdDate"
  google.protobuf.Timestamp created_date = 12;
  // 发布文章数量
    // @inject_tag: json:"articleTotal"
  int32 article_total = 13;
}


message SignupPhoneExistRequest {
  // @gotags: valid:"phone"
  string phone = 1;
}

message SignupEmailExistRequest {
  // @gotags: valid:"email"
  string email = 1;
}

message IsExist {
  bool exist = 1;
}

message ShowCaptchaReply{
  // 图片验证码id
  string captcha_id = 1;
  // 图片验证码
  string captcha_image = 2;
}

message VerifyCodePhoneRequest {
  // @gotags: valid:"captcha_id"
  string captcha_id = 1;
  // @gotags: valid:"captcha_answer"
  string captcha_answer = 2;
  // @gotags: valid:"phone"
  string phone = 3;
}

// 用户邮箱注册
message SignupUsingEmailRequest {
  // @gotags: valid:"email"
  string email = 1;
  // @gotags: valid:"verify_code"
  string verify_code = 2;
  // @gotags: valid:"name"
  string name = 3;
  // @gotags: valid:"password"
  string password = 4;
  // @gotags: valid:"password_confirm"
  string password_confirm = 5;
}

message SignupUsingEmailReply {
  message Data {
    uint64 id = 1;
    string name = 2;
  }
  Data data = 1;
  string token = 2;
}

// 用户手机注册
message SignupUserUsingPhoneRequest {
  // @gotags: valid:"phone"
  string phone = 1;
  // @gotags: valid:"verify_code"
  string verify_code = 2;
  // @gotags: valid:"name"
  string name = 3;
  // @gotags: valid:"password"
  string password = 4;
  // @gotags: valid:"password_confirm"
  string password_confirm = 5;
}

message SignupUserUsingPhoneReply {
  message Data {
    uint64 id = 1;
    string name = 2;
  }
  Data data = 1;
  string token = 2;
}

// 用户登录并签发JWT
message LoginByPhoneRequest {
  // @gotags: valid:"phone"
  string phone = 1;
  // @gotags: valid:"verify_code"
  string verify_code = 2;
}

message LoginByPhoneReply {
  uint64 uid = 1;
  string token = 2;
}

message LoginByPasswordRequest {
  // @gotags: valid:"account"
  string account = 1;
  // @gotags: valid:"password"
  string password = 2;
}

message LoginByPasswordReply {
  uint64 uid = 1;
  string token = 2;
}


message VerifyCodeEmailRequest {
  // @gotags: valid:"captcha_id"
  string captcha_id = 1;
  // @gotags: valid:"captcha_answer"
  string captcha_answer = 2;
  // @gotags: valid:"email"
  string email = 3;
}

message GetUserInfoReply {
  // @inject_tag: json:"userInfo"
  UserInfo user_info = 1;
}

message UpdateUserInfoRequest {
  // @inject_tag: json:"id"
  uint64 id = 1;
  // @inject_tag: json:"userName"
  string user_name = 2;
  // @inject_tag: json:"realName"
  string real_name = 3;
  // @inject_tag: json:"phone"
  string phone = 4;
  // @inject_tag: json:"city"
  string city = 5;
  // @inject_tag: json:"age"
  int32 age = 6;
  // @inject_tag: json:"personalProfile"
  string personal_profile = 8;
  // @inject_tag: json:"email"
  string email = 9;
  // @inject_tag: json:"avatar"
  string avatar = 10;
  // @inject_tag: json:"gender"
  Gender gender = 11;
}

message UpdateUserInfoReply {
  // @inject_tag: json:"userInfo"
  UserInfo user_info = 1;
}